first swipe at handshake stuff